--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ rocket_codegen = "0.3.5"
 diesel = { version = "1.0.0-rc1", features = ["postgres"] }
 diesel_codegen = { version = "0.16.0", features = ["postgres"] }
 dotenv = "0.9.0"
+r2d2 = "0.8.2"
+r2d2_postgres = "0.14.0"
+r2d2-diesel = "1.0.0-rc1"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+rocket_contrib = "0.3.5"
+dotenv_macros = "0.10.0"
