--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: rust
 rust:
-  - beta
   - nightly
 matrix:
   allow_failures:
     - rust: nightly
   fast_finish: true
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database build_db;' -U postgres
+  - echo "DATABASE_URL=postgres://postgres@localhost/build_db" > .env
+  - cargo install diesel_cli --no-default-features --features=postgres
+  - diesel migration run
+script:
+  - cargo build --verbose --all
+  - cargo test --verbose --all
+cache: cargo  
