--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 rocket_contrib = "0.4.0-rc.1"
-
+reqwest = "0.9.4"
+log = "0.4"
+env_logger = "0.6.0"
 
 [patch.crates-io]
 ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
